--- a/app/views/old_tables/index.html.erb
+++ b/app/views/old_tables/index.html.erb
@@ -10,18 +10,6 @@
       <th>Hometown</th>
     </tr>
   </thead>
-
-
- <% @old_tables.each do |record| %>
- <tr>
-  <td><%= record.title %></td>
-  <td><%= record.name %></td>
-  <td><%= record.username %></td>
-  <td><%= record.email %></td>
-  <td><%= record.hometown %></td>
-  </tr>
-<% end %>
-<%= will_paginate @old_tables %>
-<hr />
+</table>
 
 <%= link_to 'New Old Table', new_old_table_path %>
